--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.starschema.clouddb.bqjdbc</groupId>
 	<artifactId>bqjdbc</artifactId>
-	<version>0.1</version>
 	<name>Big Query over JDBC</name>
 	<description>A simple JDBC driver, to reach Google's BigQuery</description>
 	<repositories>
@@ -21,12 +20,21 @@
 	<artifactId>commons-io</artifactId>
 	<version>1.3.2</version>
 </dependency>
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
 			<version>1.10.3-beta</version>
 		</dependency>
-		            
+		<dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>13.0.1</version>
+</dependency>    
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
@@ -37,17 +45,12 @@
 			<artifactId>google-oauth-client-servlet</artifactId>
 			<version>1.10.1-beta</version>
 		</dependency>
-<dependency>
-	<groupId>log4j</groupId>
-	<artifactId>log4j</artifactId>
-	<version>1.2.17</version>
-</dependency>
             
 		<dependency>
 			<groupId>com.google.api.client</groupId>
 			<artifactId>google-api-client-auth-oauth2</artifactId>
 			<version>1.2.3-alpha</version>
-		</dependency>
+		</dependency>               
 		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-bigquery</artifactId>
@@ -58,7 +61,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr-runtime</artifactId>
+			<version>3.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -85,4 +93,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.3</version>
 </project>
