--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
       <version>7.0.0.pre5</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
@@ -49,13 +50,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.antlr</groupId>
-      <artifactId>antlr</artifactId>
-      <version>3.4</version>
-      <type>jar</type>
-      <scope>compile</scope>
+      <artifactId>antlr-runtime</artifactId>
+      <version>3.5.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -63,7 +63,7 @@
       <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr3-maven-plugin</artifactId>
-        <version>3.4</version>
+        <version>3.5.2</version>
         <executions>
           <execution>
             <id>run antlr</id>
@@ -133,5 +133,5 @@
       </plugin>
     </plugins>
   </build>
-  <version>1.4.z1</version>
+  <version>1.4.z3</version>
 </project>
