--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
           </execution>
         </executions>
         <configuration>
-          <finalName>${project.artifactId}-${project.version}-standalone</finalName>
+          <finalName>${project.artifactId}-${project.version}</finalName>
         </configuration>
       </plugin>
       <plugin>
@@ -144,6 +144,7 @@
         </executions>
       </plugin>
     </plugins>
+    <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
-  <version>1.4</version>
+  <version>1.5</version>
 </project>
