--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,17 @@
   <artifactId>bqjdbc</artifactId>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://opensource.org/licenses/BSD-2-Clause</url>
+      <distribution>manual</distribution>
+      <comments></comments>
+    </license>
+  </licenses>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <repositories>
     <repository>
       <id>google-api-services</id>
