--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
       </snapshots>
     </repository>
   </repositories>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://opensource.org/licenses/BSD-2-Clause</url>
+      <distribution>manual</distribution>
+      <comments></comments>
+    </license>
+  </licenses>
   <dependencies>
     <dependency>
       <groupId>commons-io</groupId>
