--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
   <artifactId>bqjdbc</artifactId>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <repositories>
     <repository>
       <id>google-api-services</id>
