OAuth 2.0 Access Token Authentication (#41)

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
       <version>v2-rev431-1.25.0</version>
     </dependency>
     <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-iamcredentials</artifactId>
+      <version>v1-rev66-1.25.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
@@ -149,5 +154,5 @@
     </plugins>
     <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
-  <version>1.10.0</version>
+  <version>1.11.0</version>
 </project>
