--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-bigquery</artifactId>
-      <version>v2-rev431-1.25.0</version>
+      <version>v2-rev20200523-1.30.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-iamcredentials</artifactId>
+      <version>v1-rev66-1.25.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -128,8 +133,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -149,5 +154,5 @@
     </plugins>
     <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
-  <version>1.9.6</version>
+  <version>2.0.3</version>
 </project>
