--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.starschema.clouddb.bqjdbc</groupId>
   <artifactId>bqjdbc</artifactId>
+  <version>2.2.0-SNAPSHOT</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/jonathanswenson/starschema-bigquery-jdbc</url>
+    </repository>
+  </distributionManagement>
   <repositories>
     <repository>
       <id>google-api-services</id>
@@ -155,5 +163,4 @@
     </plugins>
     <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
-  <version>2.2.0-SNAPSHOT</version>
 </project>
