--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.starschema.clouddb.bqjdbc</groupId>
+  <!-- Original was net.starschema.clouddb.bqjdbc but it's not changed so we can publish
+       to a groupId that we have ownership over -->
+  <groupId>com.github.jonathanswenson</groupId>
   <artifactId>bqjdbc</artifactId>
+  <version>2.2.11-SNAPSHOT</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <name>Central Repository OSSRH</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <developerConnection>scm:git:https://github.com/jonathanswenson/starschema-bigquery-jdbc.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
   <repositories>
     <repository>
       <id>google-api-services</id>
@@ -22,7 +41,7 @@
       <name>Apache License, Version 2.0</name>
       <url>http://opensource.org/licenses/BSD-2-Clause</url>
       <distribution>manual</distribution>
-      <comments></comments>
+      <comments />
     </license>
   </licenses>
   <dependencies>
@@ -152,8 +171,20 @@
           </execution>
         </executions>
       </plugin>
+      <!-- We will use the Sonatype specific plugin instead.
+           https://blog.sonatype.com/maven-deploy-to-nexus -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.8</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
     </plugins>
     <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
-  <version>2.2.0-SNAPSHOT</version>
 </project>
