--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.starschema.clouddb.bqjdbc</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.2.0</version>
+  <version>2.2.1-SNAPSHOT</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -16,6 +16,9 @@
       <url>https://maven.pkg.github.com/jonathanswenson/starschema-bigquery-jdbc</url>
     </repository>
   </distributionManagement>
+  <scm>
+    <developerConnection>scm:git:https://github.com/jonathanswenson/starschema-bigquery-jdbc.git</developerConnection>
+  </scm>
   <repositories>
     <repository>
       <id>google-api-services</id>
