Made the shaded jar explicit
Annoyingly you can't shade the default artifact if it has a classifier.
(https://stackoverflow.com/a/47775031)

Changed the *thin* to just be the default artifact classifier &
*shaded* to be ... the shaded artifact.

Augmented the README also as per Julian's suggestion.

--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
           </execution>
         </executions>
         <configuration>
-          <finalName>${project.artifactId}-${project.version}</finalName>
+          <shadedArtifactAttached>true</shadedArtifactAttached>
         </configuration>
       </plugin>
       <plugin>
@@ -247,6 +247,5 @@
         </configuration>
       </plugin>
     </plugins>
-    <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
 </project>
