--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
        to a groupId that we have ownership over -->
   <groupId>com.github.jonathanswenson</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.2.12-SNAPSHOT</version>
+  <version>2.2.12</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -191,7 +191,7 @@
           </execution>
         </executions>
         <configuration>
-          <finalName>${project.artifactId}-${project.version}</finalName>
+          <shadedArtifactAttached>true</shadedArtifactAttached>
         </configuration>
       </plugin>
       <plugin>
@@ -247,6 +247,5 @@
         </configuration>
       </plugin>
     </plugins>
-    <finalName>${project.artifactId}-${project.version}-thin</finalName>
   </build>
 </project>
