--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <url>https://github.com/jonathanswenson/starschema-bigquery-jdbc</url>
+  <url>https://github.com/jonathanswenson/bqjdbc</url>
 
   <developers>
     <developer>
@@ -22,6 +22,11 @@
   </developers>
 
   <distributionManagement>
+    <site>
+      <id>github-pages</id>
+      <url>http://jonathanswenson.github.io/bqjdbc/</url>
+    </site>
+
     <repository>
       <id>ossrh</id>
       <name>Central Repository OSSRH</name>
@@ -34,9 +39,9 @@
   </distributionManagement>
 
   <scm>
-    <connection>scm:git:git://github.com/jonathanswenson/starschema-bigquery-jdbc.git</connection>
-    <developerConnection>scm:git:ssh://github.com:jonathanswenson/starschema-bigquery-jdbc.git</developerConnection>
-    <url>http://github.com/jonathanswenson/tarschema-bigquery-jdbc/tree/master</url>
+    <connection>scm:git:git://github.com/jonathanswenson/bqjdbc.git</connection>
+    <developerConnection>scm:git:ssh://github.com:jonathanswenson/bqjdbc.git</developerConnection>
+    <url>http://github.com/jonathanswenson/bqjdbc/tree/master</url>
   </scm>
 
   <repositories>
@@ -105,11 +110,6 @@
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
       <version>1.25.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty</artifactId>
-      <version>7.0.0.pre5</version>
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
@@ -248,4 +248,6 @@
       </plugin>
     </plugins>
   </build>
+
+
 </project>
