--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
     </dependency>
     <!-- START TEST DEPENDENCIES -->
     <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.16.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
