Add geography type

--- a/src/test/resources/sampleaccount.properties
+++ b/src/test/resources/sampleaccount.properties
@@ -2,3 +2,4 @@ projectid=super-party-888
 type=service
 user=697117590302-76cr6q3217nck6gks0kf4r151j4d9f8e@developer.gserviceaccount.com
 password=src/test/resources/credentials_go_here.p12
+transformquery=true
