--- a/src/test/resources/vpcaccount.properties
+++ b/src/test/resources/vpcaccount.properties
@@ -1,6 +1,7 @@
-projectid=super-party-888
+projectid=disco-parsec-659
 type=service
 user=697117590302-76cr6q3217nck6gks0kf4r151j4d9f8e@developer.gserviceaccount.com
-password=src/test/resources/bigquery_credentials.p12
 dataset=looker_test
+password=src/test/resources/bigquery_credentials.p12
 transformquery=true
+rootUrl=https://restricted.googleapis.com
