--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,19 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.12.2</version>
+        <configuration>
+          <java>
+            <googleJavaFormat>
+              <version>1.11.0</version>
+              <style>GOOGLE</style>
+            </googleJavaFormat>
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
