Add env var for tests

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
       <version>1.7.30</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+      <scope>test</scope>
+    </dependency>
     <!-- END TEST DEPENDENCIES -->
   </dependencies>
   <build>
