--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
        to a groupId that we have ownership over -->
   <groupId>com.github.jonathanswenson</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.3.14-SNAPSHOT</version>
+  <version>2.3.14-SNAPSHOT1</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -118,18 +118,18 @@
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
-      <artifactId>google-http-client-jackson2</artifactId>
-      <version>1.39.2</version>
+      <artifactId>google-http-client-jackson</artifactId>
+      <version>1.29.2</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-bigquery</artifactId>
-      <version>v2-rev20200523-1.30.9</version>
+      <version>v2-rev20210617-1.32.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-iamcredentials</artifactId>
-      <version>v1-rev66-1.25.0</version>
+      <version>v1-rev20210326-1.32.1</version>
     </dependency>
     <!-- START TEST DEPENDENCIES -->
     <dependency>
