--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
        to a groupId that we have ownership over -->
   <groupId>com.github.jonathanswenson</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.3.14</version>
+  <version>2.3.14-SNAPSHOT2</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -118,8 +118,8 @@
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
-      <artifactId>google-http-client-jackson</artifactId>
-      <version>1.29.2</version>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>1.39.2</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
