--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
        to a groupId that we have ownership over -->
   <groupId>com.google.looker-open-source</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.3.19</version>
+  <version>2.3.20-SNAPSHOT</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.6</version>
+      <version>2.8.9</version>
       <scope>test</scope>
     </dependency>
     <dependency>
